# image-service/internal/instruction_repository.go
@@ -9,6 +9,7 @@ import (
 	"go.mongodb.org/mongo-driver/bson"
 	"go.mongodb.org/mongo-driver/bson/primitive"
 	"go.mongodb.org/mongo-driver/mongo"
+	"go.mongodb.org/mongo-driver/mongo/options"
 )
 
 type InstructionRepository struct {
@@ -64,4 +65,26 @@ func (r *InstructionRepository) UpdateOutputs(id primitive.ObjectID, outputs []F
 		return err
 	}
 	return nil
+}
+
+func (r *InstructionRepository) ListByUser(userID primitive.ObjectID) []Instruction {
+	ctx := context.Background()
+	opts := options.Find().SetSort(bson.D{{Key: "created_at", Value: -1}})
+	cur, err := r.collection.Find(ctx, bson.M{"user_id": userID}, opts)
+	if err != nil {
+		log.Errorf("Failed to list instructions: %v", err)
+		return []Instruction{}
+	}
+	defer cur.Close(ctx)
+
+	var res []Instruction
+	for cur.Next(ctx) {
+		var ins Instruction
+		if err := cur.Decode(&ins); err != nil {
+			log.Errorf("Failed to decode instruction: %v", err)
+			continue
+		}
+		res = append(res, ins)
+	}
+	return res
 }
